# uart-communication-embarcatech

./: CMakeLists.txt  README.md
include/: button.c  button.h  display.c  display.h  font.h  led.c  led.h  matrix.c  matrix.h  ws2818b.pio
src/: main.c
wokwi/: diagram.json  wokwi.toml
